Assisted deployment Deployment is interactive, allowing you to choose whether to deploy in test mode, development mode or production mode. If test mode is selected, a quick and simple deployment is done with default params